<resources>
    <string name="app_name">CRUDFireBase</string>
    <string name="form_input">FORM INPUT</string>
    <string name="kode_barang">Kode Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="satuan">Satuan</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="stok">Stok</string>
    <string name="stokmin">StokMin</string>
    <string name="simpan">Simpan</string>
</resources>